# gpuApp

./: App.tsx  BUILD_AND_INSTALL.md  FIX_NOW.md  HF_TO_MS_QUICK_REFERENCE.md  HUGGINGFACE_TO_MODELSCOPE_MIGRATION.md  JNI_RemoteWorker_API_CN (1).md  KEYSTORE_EXPLANATION.md  PUSH_SOLUTION.md  README.md  RESOLVE_MERGE_CONFLICT.md  SHARE_FEATURE_IMPLEMENTATION.md  android_test (1).c  app.json  metro.config.js  mobile_signup_api.md  package.json  pocketpalai-sim.db
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  empty.cpp  gpuf_c .h  gpuf_c.h  gpuf_jni.cpp
android/fastlane/: Fastfile
docs/: android_device_connection.md  android_release_build.md  context_window_size.md  development_workflow.md  device_connection_troubleshooting.md  generate_function_info.md  getting_started.md  local_model_projection_config.md  model_parameter_analysis.md  model_path_source.md  multimodal_inference_flow.md  network_debugging.md  projection_model_config.md  quick_fix_device_error.md  sdk_methods_comparison.md  why_device_connection_issues.md
ios/PocketPal/: Info.plist
ios/PocketPal.xcodeproj/: project.pbxproj
scripts/: check-and-setup-port-forward.sh  fix-metro-connection.sh  setup-device-port-forward.sh  start-emulator.sh  view-logs.sh
src/api/: update.ts
src/components/: index.ts
src/database/: index.ts
src/screens/: index.ts
src/services/: GpufModule.ts  RemoteWorkerService.ts  index.ts
src/store/: ModelStore.ts  UIStore.ts  defaultModels.ts
src/utils/: dnsUtils.ts  exportUtils.ts  l10n.ts  navigationConstants.ts  (+1 more)
(+85 files in other folders)
